--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
@@ -64,40 +64,51 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["Client Type"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-4">
+                    <select class="form-control select2bs4"
+                            asp-for="ClientType">
+                        <option></option>
+                        <option value="Individual">Individual</option>
+                        <option value="Corporate">Corporate</option>
+                    </select>
+                    <span asp-validation-for="ClientType" class="text-danger"></span>
+                </div>
                 <label class="col-md-2 col-form-label">@localizer["Name"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
                     <input type="text" placeholder="Please enter name" asp-for="Name"
                            class="form-control text-capitalize" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
+            </div>
+
+            <div class="form-group row">
                 <label class="col-md-2 col-form-label">@localizer["Mobile"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
                     <input type="tel" placeholder="Please enter mobile"
                            asp-for="Mobile" class="form-control" maxlength="10" />
                     <span asp-validation-for="Mobile" class="text-danger"></span>
                 </div>
+                <label class="col-md-2 col-form-label">@localizer["Office No"]</label>
+                <div class="col-md-4">
+                    <input type="tel" placeholder="Please enter phone"
+                           asp-for="Phone" class="form-control" />                    
+                </div>                
             </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group row">
-                <label class="col-md-2 col-form-label">@localizer["Email"] @* (<span style="color:red">*</span>) *@</label>
+            <div class="form-group row">                
+                <label class="col-md-2 col-form-label">@localizer["Email"]</label>
                 <div class="col-md-4">
                     <input type="email" placeholder="Please enter email" asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    
                 </div>
-                <label class="col-md-2 col-form-label">Office Email</label>
+                <label class="col-md-2 col-form-label">@localizer["Office Email"]</label>
                 <div class="col-md-4">
-                    <input type="email" placeholder="Please enter office email" asp-for="OfficeEmail" class="form-control" />
+                    <input type="text" placeholder="Please enter phone"
+                           asp-for="OfficeEmail" class="form-control" />
+                    
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">@localizer["Referal By"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-4">
@@ -105,21 +116,22 @@
                            asp-for="ReferalBy" class="form-control text-capitalize" />
                     <div id="suggestions" class="suggestions-box" style="display: none; position: absolute; border: 1px solid #ddd; max-height: 150px; overflow-y: auto; background: #fff; width: 200px; z-index: 1000;"></div>
                     <span asp-validation-for="ReferalBy" class="text-danger"></span>
-                </div>
-                @* <label class="col-md-2 col-form-label">@localizer["Appearance"] (<span style="color:red">*</span>)</label>
+                </div>     
+                <label class="col-md-2 col-form-label">@localizer["Reg. No"]</label>
                 <div class="col-md-4">
-                    <select class="form-control select2bs4" asp-for="AppearenceID"
-                            asp-items="@Model.Appearences">
-                        <option></option>
-                    </select>
-                    <span asp-validation-for="AppearenceID" class="text-danger"></span>
-                </div> *@
+                    <input type="text" placeholder="Please enter registration number"
+                           asp-for="RegNo" class="form-control" />
+                    <span asp-validation-for="RegNo" class="text-danger"></span>
+                </div>
             </div>
-        </div>
-    </div>
+            <div class="form-group row">
+                <label class="col-md-2 col-form-label">@localizer["Properiter"]</label>
+                <div class="col-md-4">
+                    <input type="text" placeholder="Please enter owner"
+                           asp-for="Properiter" class="form-control text-capitalize" />
+                </div>
+            </div>
 
-    <div class="row">
-        <div class="col-md-12">
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">@localizer["Address"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-10">
@@ -130,7 +142,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>    
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         @{
