--- a/CourtApp.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CourtApp.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,109 +15,148 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>@ViewData["Title"]</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            background: linear-gradient(135deg, #1e3c72, #2a5298), url('/images/lawyer-background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            font-family: Arial, sans-serif;
+            color: white;
+            transition: background 0.5s, color 0.5s;
+        }
+
+        .dark-mode {
+            background: #1e1e1e !important;
+            color: #f8f9fa !important;
+        }
+
+        .container-wrapper {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+        }
+
+        .quote-container {
+            width: 50%;
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-align: center;
+            padding: 30px;
+        }
+
+        .login-container {
+            width: 100%;
+            max-width: 400px;
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            color: black;
+        }
+
+        .dark-mode .login-container {
+            background: #333;
+            color: white;
+        }
+
+        .footer {
+            width: 100%;
+            background: #222;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+        }
+
+        .navbar-brand {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .nav-right {
+            display: flex;
+            align-items: center;
+        }
+    </style>
     <partial name="_Styles" />
 </head>
 <body>
-    <nav id="navigationBar" class="main-header navbar navbar-expand navbar-light" style="margin:0 !important">
-        <ul class="navbar-nav" style=" margin-inline-start: auto; ">
-            <li class="nav-item dropdown no-arrow">
-                @(await Component.InvokeAsync<CultureViewComponent>())
-            </li>
-        </ul>
-        <ul class="navbar-nav">
+    <nav class="navbar">
+        <div class="navbar-brand">Lawyer Diary Management System</div>
+        <div class="nav-right">
+            <ul class="navbar-nav me-3">
+                <li class="nav-item dropdown no-arrow">
+                    @(await Component.InvokeAsync<CultureViewComponent>())
+                </li>
+            </ul>
             <div class="custom-control custom-switch">
                 <input type="checkbox" class="custom-control-input" id="darkSwitch">
-                <label class="custom-control-label" style="font-weight:400" for="darkSwitch">@localizer["Dark Mode"]</label>
-                </divv>
-        </ul>
-    </nav>
-    <div class="content-wrapper mrl-zero" id="contentWrapper">
-        <div class="container">
-
-            <!-- Outer Row -->
-            <div class="row justify-content-center">
-
-                <div class="col-xl-10 col-lg-12 col-md-9">
-
-                    <div class="card o-hidden border-0 my-5">
-                        <div class="card-body p-0">
-                            <!-- Nested Row within Card Body -->
-                            <div class="row">
-                                <div class="col-lg-6 d-none d-lg-block" style=" background: url('/images/bg-login.jpg');background-position: center;background-size: cover;"></div>
-                                <div class="col-lg-6">
-                                    <div style="padding:10rem 3rem 10rem 3rem !important;">
-                                        <div class="text-center">
-                                            <h1 class="h4 text-gray-900 mb-4">@localizer["Login"]</h1>
-                                        </div>
-                                        <form class="user" id="account" method="post">
-                                            <div class="form-group">
-                                                <input asp-for="Input.Email" type="email" class="form-control form-control-user" aria-describedby="emailHelp" placeholder="@localizer["Please enter email"]">
-                                                <small><span asp-validation-for="Input.Email" class="text-danger"></span></small>
-                                            </div>
-                                            <div class="form-group">
-                                                <input asp-for="Input.Password" type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
-                                                <small><span asp-validation-for="Input.Password" class="text-danger"></span></small>
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="custom-control custom-checkbox small">
-                                                    <input asp-for="Input.RememberMe" type="checkbox" class="custom-control-input" id="customCheck">
-                                                    <label class="custom-control-label" for="customCheck">@localizer["Remember Me"]</label>
-                                                </div>
-                                            </div>
-                                            <button type="submit" class="btn btn-primary btn-user btn-block">
-                                                @localizer["Login"]
-                                            </button>
-                                            <hr>
-                                            @* <div class="row">
-                                                <div class="col-lg-6">
-                                                    <a class="btn btn-google btn-user btn-block">
-                                                        <i class="fab fa-google fa-fw"></i> Login with Google
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-6">
-                                                    <a class="btn btn-facebook btn-user btn-block">
-                                                        <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                                    </a>
-                                                </div>
-                                            </div> *@
-                                        </form>
-                                        @*  <hr> *@
-                                        <div class="row">
-                                            <div class="text-center">
-                                                <a asp-area="Identity" asp-page="/Account/forgotpassword" class="small">@localizer["Forgot Password?"]</a>
-                                            </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                            <div class="text-center">
-                                                <a asp-area="Identity" asp-page="/Account/register" class="small">@localizer["Create an Account!"]</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <label class="custom-control-label" style="font-weight:400" for="darkSwitch">Dark Mode</label>
             </div>
-            @* <div class="row justify-content-center">
-                <div class="col-xl-10 col-lg-12 col-md-9">
-                    <div class="card">
-                        <div class="card-header py-3">
-                            <h6 class="m-0 text-secondary">@localizer["Default Credentials"]</h6>
-                        </div>
-                        <div class="card-body">
-                            <div class="row no-gutters align-items-center">
-                                <div class="col">
-                                    <b>Super Admin : </b> superadmin@gmail.com / 123Pa$$word! / Default
-                                    <br />
-                                    <b>Basic User : </b> basicuser@gmail.com / 123Pa$$word! / Default
-                                </div>
-                            </div>
-                        </div>
+        </div>
+    </nav>
+    <div class="container-wrapper">
+        <div class="quote-container">
+            <p>"The law is reason, free from passion." - Aristotle</p>
+            <p>"Justice cannot be for one side alone, but must be for both." - Eleanor Roosevelt</p>
+            <p>"An unjust law is no law at all." - Saint Augustine</p>
+        </div>
+        <div class="login-container">
+            <h2 class="text-center">Login</h2>
+            <form class="user" id="account" method="post">
+                <div class="form-group">
+                    <input asp-for="Input.Email" type="email" class="form-control form-control-user" aria-describedby="emailHelp" placeholder="@localizer["Please enter email"]">
+                    <small><span asp-validation-for="Input.Email" class="text-danger"></span></small>
+                </div>
+                <div class="form-group">
+                    <input asp-for="Input.Password" type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                    <small><span asp-validation-for="Input.Password" class="text-danger"></span></small>
+                </div>
+                <div class="form-group">
+                    <div class="custom-control custom-checkbox small">
+                        <input asp-for="Input.RememberMe" type="checkbox" class="custom-control-input" id="customCheck">
+                        <label class="custom-control-label" for="customCheck">@localizer["Remember Me"]</label>
                     </div>
                 </div>
-            </div> *@
+                <button type="submit" class="btn btn-primary btn-user btn-block">
+                    @localizer["Login"]
+                </button>
+                <hr>
+                <div class="row mt-3">
+                    <div class="text-center">
+                        <a asp-area="Identity" asp-page="/Account/forgotpassword" class="small">@localizer["Forgot Password?"]</a>
+                    </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <div class="text-center">
+                        <a asp-area="Identity" asp-page="/Account/register" class="small">@localizer["Create an Account!"]</a>
+                    </div>
+                </div>
+            </form>            
         </div>
     </div>
-
+    <footer class="footer">
+        <div>&copy; 2025 Lawyer Diary. All Rights Reserved. | Version 1.0.0</div>
+        <div>
+            <a href="#" class="text-white me-2"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </footer>   
     <partial name="_Scripts" />
 </body>
 </html>
