--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/Index.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = localizer["Generate Case Forms"];
 }
 <style>
+    /* Force each form to start on a new page */
+    .form-section {
+        page-break-after: always;
+    }
     .card {
         width: 100%;
     }
@@ -14,74 +18,154 @@
         width: 210mm;
         height: 297mm;
     }
+
+    body {
+        /* 	font-family: 'Ubuntu', sans-serif; */
+        font-weight: bold;
+    }
+
+    /* .select2-container {
+                                            min-width: 400px;
+                                        } */
+
+    .select2-results__option {
+        padding-right: 20px;
+        vertical-align: middle;
+    }
+
+        .select2-results__option:before {
+            content: "";
+            display: inline-block;
+            position: relative;
+            height: 20px;
+            width: 20px;
+            border: 2px solid #e9e9e9;
+            border-radius: 4px;
+            background-color: #fff;
+            margin-right: 20px;
+            vertical-align: middle;
+        }
+
+        .select2-results__option[aria-selected=true]:before {
+            font-family: fontAwesome;
+            content: "\f00c";
+            color: #fff;
+            background-color: #f77750;
+            border: 0;
+            display: inline-block;
+            padding-left: 3px;
+        }
+
+    .select2-container--default .select2-results__option[aria-selected=true] {
+        background-color: #fff;
+    }
+
+    .select2-container--default .select2-results__option--highlighted[aria-selected] {
+        background-color: #eaeaeb;
+        color: #272727;
+    }
+
+    .select2-container--default .select2-selection--multiple {
+        margin-bottom: 10px;
+    }
+
+    .select2-container--default.select2-container--open.select2-container--below .select2-selection--multiple {
+        border-radius: 4px;
+    }
+
+    .select2-container--default.select2-container--focus .select2-selection--multiple {
+        border-color: #f77750;
+        border-width: 2px;
+    }
+
+    .select2-container--default .select2-selection--multiple {
+        border-width: 2px;
+    }
+
+    .select2-container--open .select2-dropdown--below {
+        border-radius: 6px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+
+    .select2-selection .select2-selection--multiple:after {
+        content: 'hhghgh';
+    }
+    /* select with icons badges single*/
+    .select-icon .select2-selection__placeholder .badge {
+        display: none;
+    }
+
+    .select-icon .placeholder {
+        /* 	display: none; */
+    }
+
+    .select-icon .select2-results__option:before,
+    .select-icon .select2-results__option[aria-selected=true]:before {
+        display: none !important;
+        /* content: "" !important; */
+    }
+
+    .select-icon .select2-search--dropdown {
+        display: none;
+    }
+
+    .applicant-number {
+        float: right;
+        border: 1px solid black;
+        height: 30px;
+        width: 30px;
+        text-align: center;
+    }
+
+    
 </style>
 @model FmpViewModel
 <section class="bg-light pt-5 pb-5 shadow-sm">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-9 mb-3 d-flex align-items-stretch" style="float:left;">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="text-left mb-9"><label id="lblHeader"></label></div>
-                        <div class="text-right mb-3"><a href="#" id="btnPrint" class="btn btn-primary">Print</a></div>
-                    </div>
-                    <div class="card-body">
-                        <div id="viewAll" class="card-body table-responsive"></div>
-                    </div>
-                </div>
+        <!-- Filter Section -->
+        <div class="row mb-3">
+            <div class="col-lg-3">
+                <label class="global-font">Select Cases (<span style="color:red">*</span>)</label>
+                <select class="form-control select2bs4" asp-for="@Model.CaseIds"
+                        asp-items="@Model.Cases" multiple>
+                    <option></option>
+                </select>
+            </div>
+            <div class="col-lg-3">
+                <label class="global-font">Select Title</label>
+                <select class="form-control select2bs4" asp-for="@Model.TitleIds" asp-items="@Model.Titles">
+                    <option></option>
+                </select>
+            </div>
+            <div class="col-lg-3">
+                <label class="global-font">Select Form Type (<span style="color:red">*</span>)</label>
+                <select class="form-control select2bs4" asp-for="@Model.FormTypeId" asp-items="@Model.FormTypes">
+                    <option></option>
+                </select>
             </div>
 
-            <div class="col-lg-3 mb-3 d-flex align-items-stretch" style="float:right">
+
+            <div class="col-lg-3 d-flex align-items-end">
+                <a id="btnSearch" class="btn bg-success mr-2">
+                    <i class="fa fa-search"></i> Generate
+                </a>
+                <a id="reload" class="btn btn-primary text-white">
+                    <i class="fa fas fa-reset"></i> Reset
+                </a>
+            </div>
+        </div>
+
+        <!-- Output Section -->
+        <div class="row">
+            <div class="col-lg-12">
                 <div class="card">
-                    <div class="card-header">Search Cases</div>
-                    <div class="card-body d-flex flex-column">
-                        <div class="px-0 py-0">
-                            <div class="global-font pt-1 px-0">
-                                Select Form Type
-                                (<span style="color:red">*</span>)
-                            </div>
-                            <div style="width:230px!important">
-                                <select class="form-control select2bs4" asp-for="@Model.FormTypeId" asp-items="@Model.FormTypes">
-                                    <option></option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="px-0 py-0">
-                            <div class="global-font pt-1 px-0">
-                                Select Cases
-                                (<span style="color:red">*</span>)
-                            </div>
-                            <div>
-                                <select class="form-control select2bs4" asp-for="@Model.CaseIds" asp-items="@Model.Cases">
-                                    <option></option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="px-0 py-0">
-                            <div class="global-font pt-1 px-0">
-                                Select Title
-
-                            </div>
-                            <div>
-                                <select class="form-control select2bs4" asp-for="@Model.TitleIds" asp-items="@Model.Titles">
-                                    <option></option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <br />
-                        <div class="px-0 py-0">
-                            <a id="btnSearch" class="btn bg-success">
-                                <i class="fa fa-search"></i> Generate
-                            </a>
-                            <a id="reload" class="btn btn-primary text-white">
-                                <i class="fa fas fa-reset"></i>
-                                Reset
-                            </a>
-                        </div>
-
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3 class="mb-0" id="lblHeader"></h3>
+                        <a href="#" id="btnPrint" class="btn btn-primary">Print</a>
                     </div>
-                    <div class="card-footer">
+
+                    <div class="card-body">
+                        <div id="viewAll" class="table-responsive"></div>
                     </div>
                 </div>
             </div>
@@ -90,81 +174,5 @@
 </section>
 @section Scripts
 {
-    <script>
-        $(document).ready(function () {
-            $("#FormTypeId").select2({
-                placeholder: "Select form type",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            $("#FormTypeId").on("change", function () {
-                $("#lblHeader").text($("#FormTypeId :selected").text())
-            });
-
-            $("#CaseIds").on("change", function () {
-                $("#TitleIds").empty();
-                $.getJSON("/Litigation/CaseInfoPrinting/GetCompTitlesByCases?caseIds=" + $("#CaseIds").val(), function (data) {
-                    console.log(data);
-                    $.each(data, function (i, item) {
-                        console.log(item.Name);
-                        $("#TitleIds").append(`<option /><option value="${item.Id}">${item.Name}</option>`);
-                    });
-                });
-            });
-
-
-
-            $("#btnPrint").click(function () {
-                printData();
-            })
-            function printData() {
-                var divToPrint = document.getElementById("printableArea");
-                newWin = window.open("");
-                newWin.document.write(divToPrint.outerHTML);
-                newWin.print();
-                newWin.close();
-            }
-
-            $("#CaseIds").select2({
-                placeholder: "Select cases",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-            $("#TitleIds").select2({
-                placeholder: "Select title",
-                theme: "bootstrap4",
-                escapeMarkup: function (m) {
-                    return m;
-                }
-            });
-
-            $("#btnSearch").on("click", function () {
-               
-                var t = $("#FormTypeId").val();
-                var v = $("#CaseIds").val();
-                var title = $("#TitleIds").val();
-                if(t && v){
-                    loadData(t, v,title);
-                }
-                else
-                {
-                    Swal.fire({
-                        title: "Please select the form type or case for generating the report!",
-                        text: "error",
-                        icon: "error"
-                    });
-                }
-            });
-
-
-        });
-        function loadData(t, v,title) {
-
-            $('#viewAll').load('/Litigation/CaseInfoPrinting/LoadFormPrinting?type=' + t + "&Cases=" + v + "&AppNo=" + title);
-        }
-    </script>
+    <script src="~/js/formprint.js"></script>
 }
