--- a/CourtApp.Web/Areas/Report/Views/Register/_Instition.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/_Instition.cshtml
@@ -1,68 +1,46 @@
-﻿@{
-    ViewData["Title"] = localizer["Institution Register"];
-    ViewData["Caption"] = localizer["User's Institution Register"];
-}
-@model InstitutionRegisterViewMode
-<div class="card">    
-    <div id="viewAll" class="card-body table-responsive">
-        <form asp-controller="Hearing" method="post" asp-action="UpdateCaseDate" class="d-inline">
-            <div class="row">
-                <div class="col-md-12">
-                    <table id="tblRegister" class="table table-striped" width="100%" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th>Sno.</th>
-                                <th>Court.</th>
-                                <th>Type</th>
-                                <th>No</th>
-                                <th>Year</th>
-                                <th>Title</th>
-                                <th>Institution Date</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @for (int i = 0; i < Model.dtmodel.Count(); i++)
-                            {
-                                <tr>
-                                    <td>
-                                        <input type="hidden" asp-for="@Model.dtmodel[i].Id" />
-                                        @(i + 1)
-                                    </td>
-                                    <td> @Model.dtmodel[i].Court </td>
-                                    <td>@Model.dtmodel[i].CaseType</td>
-                                    <td>@Model.dtmodel[i].No</td>
-                                    <td>@Model.dtmodel[i].Year</td>
-                                    <td>
-                                        @{
-                                            string Title = Model.dtmodel[i].FirstTitle + " Vs " + Model.dtmodel[i].SecondTitle;
-                                        }
-                                        @Title
-                                    </td>
-                                    <td> @Model.dtmodel[i].InsititutionDate </td>
-                                    <td>
-                                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.dtmodel[i].Id', 'See History')" class="fa fa-history"></a>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-@section Scripts {
-    <script>
-        $(document).ready(function () {
-            $("#tblRegister").DataTable(
-                {
-                    "language": {
-                        "emptyTable": "Record is not there!"
-                    }
+﻿@model InstitutionRegisterViewMode
+<tbody>
+    @for (int i = 0; i < Model.dtmodel.Count(); i++)
+    {
+        <tr>
+            <td>
+                <input type="hidden" asp-for="@Model.dtmodel[i].Id" />
+                @(i + 1)
+            </td>
+            <td> @Model.dtmodel[i].Court </td>
+            <td>@Model.dtmodel[i].CaseType</td>
+            <td>@Model.dtmodel[i].No</td>
+            <td>@Model.dtmodel[i].Year</td>
+            <td>
+                @{
+                    string Title = Model.dtmodel[i].FirstTitle + " Vs " + Model.dtmodel[i].SecondTitle;
                 }
-            );
-        });
-    </script>
-}
-
+                @Title
+            </td>
+            <td> @Model.dtmodel[i].InsititutionDate </td>
+            <td text-right">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Action
+                    </button>
+                    <div class="dropdown-menu shadow animated--grow-in">
+                        <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@Model.dtmodel[i].Id', 'See History')"
+                           class="dropdown-item" title="See History"><i class="fa fa-history"></i>  History</a>
+                        <a onclick="jQueryModalGet('/Litigation/casemanage/GetFileUploadModel?CaseId=@Model.dtmodel[i].Id&w=ir', 'Upload Document')"
+                           class="dropdown-item" title="Upload Document"><i class="fas fa-file-alt"></i>  Upload Document</a>
+                        <a asp-area="Litigation" asp-controller="casemanage" asp-action="GetCaseDetail"
+                           asp-route-id="@Model.dtmodel[i].Id" class="dropdown-item" title="View Case Detail"><i class="fa fa-eye"></i>  Case Detail</a>
+                        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Cases.Delete)).Result.Succeeded)
+                        {
+                            <form id="form_delete_@Model.dtmodel[i].Id" asp-area="Litigation"
+                                  asp-controller="casemanage" method="post"
+                                  asp-action="OnPostDelete" asp-route-id="@Model.dtmodel[i].Id" onsubmit="return jQueryModalDelete(this)">
+                                <a href="javascript:$('#form_delete_@Model.dtmodel[i].Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
+                            </form>
+                        }
+                    </div>
+                </div>
+            </td>
+        </tr>
+    }
+</tbody>
