--- a/CourtApp.Web/Areas/LawyerDiary/Views/Lawyer/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Lawyer/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.LawyerDirectory.Create)).Result.Succeeded)
+        @if (AuthorizationService.AuthorizeAsync(User, "AdminPanel.LawyerDirectory.Create").Result.Succeeded)
         {
             <a onclick="jQueryModalGet('/lawyerdiary/lawyer/OnGetCreateOrEdit','Add/Update Lawyer Information')" class="btn bg-success">
                 <i class="fa fa-plus-square"></i> Add Lawyer
