--- a/CourtApp.Web/Views/_ViewImports.cshtml
+++ b/CourtApp.Web/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using CourtApp.Application.Constants
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
 @using CourtApp.Infrastructure.Identity.Models
+@using CourtApp.Web.Permission
 @inject IAuthorizationService AuthorizationService
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, CourtApp.Web
